# home

./: .bash_profile  .bashrc  .emacs  .gitignore  .gitmodules  .haskeline  .latexmkrc  .password-store  .tmux.conf  .tmuxp  .vimrc  builders  dropbox  flake.nix  oseary  readme.md
.IntelliJIdea14/: .gitignore
.IntelliJIdea15/: .gitignore
.atom/: .gitignore  config.cson  keymap.cson  styles.less
.bin/: cabal  compose  emacs  emacs-daemon  emacs-nw  ghc  ghc-mod  ghc-modi  google_closure  hdevtools  idea  nx-sys  nx-user  screenshot  screentext  stack  stack-help  start  stop
.cabal/: config
.config/: .gitignore  stylebot.json  user-dirs.conf  user-dirs.dirs
.darcs/: author  boring
.emacs.d/: .gitignore  backup.el  cursor.el  custom.el  exec-path.el  file.el  haskell.el  history  init.el  line-numbers.el  line-wrapping.el  markdown.el  mouse.el  nix-path.el  org.el  projectile-bookmarks.eld  tabbar.el
.ghc/: .gitignore  ghci.conf  imports.hs
.kde/: .gitignore
.lein/: .gitignore  profiles.clj
.local/: .gitignore
.moc/: config
.nix/: .gitignore  emacs-daemon.nix  nx-sys  nx-user  synaptics.nix  sys-annemarie.nix  sys-base.nix  sys-desktop.nix  sys-mandeeza.nix  sys-renzo.nix  sys-server.nix  sys.nix  user-desktop.nix  user-local.nix  user-server.nix  user-stable.nix  user-unstable.nix  user.nix
.nixpkgs/: config.nix
.sbt/: .gitignore
.stack/: .gitignore  config.yaml  shell.nix
.xmonad/: .gitignore  xmonad.hs
acherus-militant/: flake.nix
links/: home  (+4 more)
yi/: .stylish-haskell.yaml  cabal2nix.sh  stack.yaml  yi-chris-martin.cabal  yi.hs  yi.nix
(+630 files in other folders)
