name:  yi-chris-martin
version: 0.1.0.0

build-type: Simple
cabal-version: >= 1.10

executable yi
  main-is: yi.hs
  hs-source-dirs: .
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  build-depends:
      base >=4.7 && <5
    , microlens-platform
    , mtl
    , yi-core
    , yi-frontend-vty
    , yi-keymap-cua
    , yi-misc-modes
    , yi-mode-haskell
    , yi-mode-javascript
